<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculo_de_CR</string>
    <string name="action_settings">Settings</string>
    <string name="apresentacao">Calculo do CRA</string>
    <string name="nMatricula">Matrícula</string>
    <string name="botaoPagPrincipal">OK</string>
    <string name="title_activity_tela2">Tela2</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_primeiro_semestre">PrimeiroSemestre</string>
    <string name="title_activity_segundo_semestre">SegundoSemestre</string>
    <string name="title_activity_terceiro_semestre">TerceiroSemestre</string>
    <string name="title_activity_quarto_semestre">QuartoSemestre</string>
    <string name="title_activity_quinto_semestre">QuintoSemestre</string>
    <string name="title_activity_sexto_semestre">SextoSemestre</string>
    <string name="title_activity_setimo_semestre">SetimoSemestre</string>
    <string name="title_activity_oitavo_semestre">OitavoSemestre</string>
    <string name="CargaCurso">Carga do Curso - 3.240</string>
    <string name="CargaComp">Carga Comprida -</string>
    <string name="CargaCompQuantidade">null</string>
    <string name="CRA">CRA -</string>
    <string name="BtnAnterior">Anterior</string>
    <string name="InlNotas">Incluir Notas</string>
    <string name="CRACacl">null</string>
    <string name="Relatorio">Preencha Relatorio</string>
    <string name="PrimeiroSem">Primeiro Semestre</string>
    <string name="SegundoSem">Segundo Semestre</string>
    <string name="TerceiroSem">Terceiro Semestre</string>
    <string name="QuartoSem">Quarto Semestre</string>
    <string name="QuintoSem">Quinto Semestre</string>
    <string name="SextoSem">Sexto Semestre</string>
    <string name="SetimoSem">Setimo semestre</string>
    <string name="OitavoSem">Oitavo Semestre</string>
    <string name="BtnProximo">Proximo</string>
    <string name="BtnCalcCRA">Calcula CRA</string>
    <string name="FSI">FSI - 4 creditos - Nota:</string>
    <string name="TP1">TPI - 6 creditos - Nota:</string>
    <string name="DPW">DPW - 4 creditos - Nota:</string>
    <string name="OC">OC - 6 creditos - Nota:</string>
    <string name="MB">MB - 2 creditos - Nota:</string>
    <string name="TPD">TPD - 3 creditos - Nota:</string>
    <string name="TPII">TPII - 5 creditos - Nota:</string>
    <string name="ILC">ILC - 4 creditos - Nota: </string>
    <string name="AEA">AEA - 4 creditos - Nota:</string>
    <string name="Calc1">CalculoI - 4 creditos - Nota:</string>
    <string name="AL">AL - 4 creditos - Nota:</string>
    <string name="Eletiva1">Eletiva - Creditos?</string>
    <string name="BD1">BDI - 4 creditos - Nota:</string>
    <string name="EDD1">EDDI - 4 creditos - Nota:</string>
    <string name="SO">So - 4 creditos - Nota:</string>
    <string name="EDC">EDC - 4 creditos - Nota:</string>
    <string name="Calc2">CalculoII - 4 creditos - Nota:</string>
    <string name="Prob">Prob - 4 creditos - Nota:</string>
    <string name="AS">As - 4 creditos - Nota:</string>
    <string name="EDDII">EDDII - 4 creditos - Nota:</string>
    <string name="IHC">IHC - 4 creditos - Nota:</string>
    <string name="Redes1">RedesI - 4 creditos - Nota:</string>
    <string name="LFA">LFA - 4 creditos - Nota:</string>
    <string name="Estatistica">Estatistica - 4 creditos - Nota:</string>
    <string name="PCS">PCS - 4 creditos - Nota:</string>
    <string name="BDII">BDII - 4 creditos - Nota:</string>
    <string name="AA">AA - 4 creditos - Nota:</string>
    <string name="RedesII">RedesII - 4 creditos - Nota:</string>
    <string name="Emp">Empreendorismo - 4 creditos - Nota:</string>
    <string name="PM">PM - 4 creditos - Nota:</string>
    <string name="PCS_SGBD">PCS_SGBD - 4 creditos - Nota:</string>
    <string name="ADF">ADF - 4 creditos - Nota:</string>
    <string name="Optativa">Optativa - Creditos?</string>
    <string name="PS">PS - 4 creditos - Nota:</string>
    <string name="PGI">PGI - 3 creditos - Nota:</string>
    <string name="GPI">GPI - 4 creditos - Nota:</string>
    <string name="PGII">PGII - 3 creditos - Nota:</string>

</resources>
